Closed Bug 1747264 Opened 3 years ago Closed 3 years ago

Crash in [@ OOM | large | NS_ABORT_OOM | nsParser::Parse] on register.eshram.gov.in, mostly with 32-bit builds on Windows 7

Categories

(Core :: XML, defect)

defect

Tracking

()

RESOLVED FIXED
97 Branch
Tracking Status
firefox-esr91 --- fixed
firefox95 --- wontfix
firefox96 --- fixed
firefox97 --- fixed

People

(Reporter: aryx, Assigned: hsivonen)

References

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

Between 30 and 120 crashes per Firefox 96 beta version, mostly with 32-bit builds of Firefox and >70% on Windows 7.

If an url had been submitted for the Firefox 96 beta crashes, it used the host https://register.eshram.gov.in/ which only seems accessible from India (using a VPN worked). The page which links to it is https://eshram.gov.in/ and connections to it work from outside India.

Crash report: https://crash-stats.mozilla.org/report/index/f4d769c0-868c-481d-8bd6-3b15e0211222

MOZ_CRASH Reason: MOZ_CRASH(OOM)

Top 10 frames of crashing thread:

0 xul.dll NS_ABORT_OOM xpcom/base/nsDebugImpl.cpp:616
1 xul.dll nsParser::Parse parser/htmlparser/nsParser.cpp:708
2 xul.dll mozilla::dom::XMLDocument::StartDocumentLoad dom/xml/XMLDocument.cpp:295
3 xul.dll nsContentDLF::CreateInstance layout/build/nsContentDLF.cpp:123
4 xul.dll mozilla::image::SVGDocumentWrapper::OnStartRequest image/SVGDocumentWrapper.cpp:200
5 xul.dll mozilla::image::VectorImage::OnStartRequest image/VectorImage.cpp:1389
6 xul.dll static mozilla::image::ImageFactory::CreateImage image/ImageFactory.cpp:130
7 xul.dll imgRequest::OnDataAvailable image/imgRequest.cpp:968
8 xul.dll ProxyListener::OnDataAvailable image/imgLoader.cpp:3024
9 xul.dll nsCORSListenerProxy::OnDataAvailable netwerk/protocol/http/nsCORSListenerProxy.cpp:657

XML, not HTML.

I suspect the URL is huge so that the conversion from UTF-8 to UTF-16 OOMs, but the part calling NS_ABORT_OOM has been inlined away.

Component: DOM: HTML Parser → XML
Assignee: nobody → hsivonen
Status: NEW → ASSIGNED
Crash Signature: [@ OOM | large | NS_ABORT_OOM | nsParser::Parse] → [@ nsParser::OnStartRequest] [@ OOM | large | NS_ABORT_OOM | nsParser::Parse]
Pushed by hsivonen@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/827b488113ac Avoid OOMing if the URL of an XML document is huge. r=smaug
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 97 Branch

Should this be uplifted?

Flags: needinfo?(hsivonen)

(In reply to Sebastian Hengst [:aryx] (needinfo me if it's about an intermittent or backout) from comment #5)

Should this be uplifted?

Unclear. The risk of uplifting is pretty much zero. However, the benefit probably isn't particularly high. I'll nominate.

Flags: needinfo?(hsivonen)

Comment on attachment 9256545 [details]
Bug 1747264 - Avoid OOMing if the URL of an XML document is huge.

Beta/Release Uplift Approval Request

  • User impact if declined: OOM crashes
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Turns an existing OOM check from abort to early return.
  • String changes made/needed: None

ESR Uplift Approval Request

  • If this is not a sec:{high,crit} bug, please state case for ESR consideration: Extremely low-risk patch to avoid OOM crashes
  • User impact if declined: OOM crashes
  • Fix Landed on Version: 97
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Turns an existing OOM check from abort to early return.
Attachment #9256545 - Flags: approval-mozilla-esr91?
Attachment #9256545 - Flags: approval-mozilla-beta?

Comment on attachment 9256545 [details]
Bug 1747264 - Avoid OOMing if the URL of an XML document is huge.

Approved for 96.0rc1

Attachment #9256545 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

Comment on attachment 9256545 [details]
Bug 1747264 - Avoid OOMing if the URL of an XML document is huge.

Approved for 91.5esr.

Attachment #9256545 - Flags: approval-mozilla-esr91? → approval-mozilla-esr91+
Regressions: 1748482
Blocks: 1748482
No longer regressions: 1748482
See Also: 1748482
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: