Bug 1747264 - Avoid OOMing if the URL of an XML document is huge. r=smaug, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D134506